--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,66 @@
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
+# Ignore the following file extensions:
+*.obj
+*.dll
+*.lib
+*.tlog
+*.map
+*.bsc
+*.manifest
+*.cache
+*.sbr
+*.idb
+*.lastbuildstate
+*.exp
+*.opensdf
 
-# Folder config file
-Desktop.ini
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+win32/
+bld/
+[Bb]in/
+[Oo]bj/
+[Ll]og/
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
+*_i.c
+*_p.c
+*_i.h
+*.ilk
+*.meta
+*.obj
+*.pch
+*.pdb
+*.pgc
+*.pgd
+*.rsp
+*.sbr
+*.tlb
+*.tli
+*.tlh
+*.tmp
+*.tmp_proj
+*.log
+.builds
+*.pidb
+*.svclog
 
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
+# User-specific files
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
 
-# Windows shortcuts
-*.lnk
-
-# =========================
-# Operating System Files
-# =========================
-
-# OSX
-# =========================
-
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# Visual C++ cache files
+ipch/
+*.aps
+*.ncb
+*.opendb
+*.opensdf
+*.sdf
+*.cachefile
+*.VC.db
+*.VC.VC.opendb
